--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.1.1
   http: ^1.1.0
+  get_it: ^7.6.7
 
 dev_dependencies:
   flutter_test:
